# api/public/api.yaml
@@ -19,6 +19,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/AliveResponse'
   /secrets:
+    get:
+      summary: Get secret
+      description: Get secret by id
+      parameters:
+        - name: secretID
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetSecretsOut'
     post:
       summary: Create secret
       description: Create secret for given payload
@@ -26,7 +42,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SecretsIn'
+              $ref: '#/components/schemas/PostSecretsIn'
       responses:
         '400':
           description: Validation error
@@ -39,7 +55,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SecretsOut'
+                $ref: '#/components/schemas/PostSecretsOut'
 
 components:
   schemas:
@@ -50,7 +66,7 @@ components:
           type: string
       required:
         - error
-    SecretsIn:
+    GetSecretsOut:
       type: object
       properties:
         payload:
@@ -58,7 +74,15 @@ components:
           description: Secret payload
       required:
         - payload
-    SecretsOut:
+    PostSecretsIn:
+      type: object
+      properties:
+        payload:
+          type: string
+          description: Secret payload
+      required:
+        - payload
+    PostSecretsOut:
       type: object
       properties:
         secretID:
